samples/_failures_safe/1761662197_6a8b29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_509262c6.c: In function ‘main’:
./samples/SAFE/__tmp_509262c6.c:146:24: error: missing terminating " character
  146 |     add_to_heap(&heap, "2024-01-
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_509262c6.c:146:5: error: expected expression at end of input
  146 |     add_to_heap(&heap, "2024-01-
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_509262c6.c:146:5: error: too few arguments to function ‘add_to_heap’
./samples/SAFE/__tmp_509262c6.c:45:5: note: declared here
   45 | int add_to_heap(LogHeap *heap, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_509262c6.c:146:5: error: expected declaration or statement at end of input
  146 |     add_to_heap(&heap, "2024-01-
      |     ^~~~~~~~~~~
